# Text-Based-Logic-Gates

./: CMakeLists.txt  README.md  main.c++
TBLGProgram/: logicgateidea.txt  main.cpp
TBLGProgram/libs/: Logic.cpp  QuestGen.cpp
include/: Logic.h  QuestGen.h
libs/: Logic.c++  Logic.cpp  Logic.h  QuestGen.c++  QuestGen.cpp  QuestGen.h
src/: main.cpp
